// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/select_team/SelectTeam should match snapshot 1`] = `
<div>
  <Connect(Component) />
  <BackButton
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="select-team__container signup-team__container"
    >
      <img
        alt="signup team logo"
        className="signup-team-logo"
        src={null}
      />
      <Memo(SiteNameAndDescription)
        siteName="Mattermost"
      />
      <div
        className="signup__content"
        id="teamsYouCanJoinContent"
      >
        <div
          className="SelectTeam__sub-header"
        >
          <h4>
            <MemoizedFormattedMessage
              defaultMessage="Teams you can join: "
              id="signup_team.join_open"
            />
          </h4>
          <LearnAboutTeamsLink />
        </div>
        <InfiniteScroll
          bufferValue={280}
          callBack={[Function]}
          endOfDataMessage=""
          itemsPerPage={30}
          loaderStyle={
            Object {
              "height": "40px",
              "padding": "0px",
            }
          }
          pageNumber={0}
          styleClass="signup-team-all"
          totalItems={15}
        >
          <div
            className="signup-team-dir-err"
          >
            <div>
              <MemoizedFormattedMessage
                defaultMessage="No teams are available to join. Please create a new team or ask your administrator for an invite."
                id="signup_team.no_open_teams_canCreate"
              />
            </div>
          </div>
        </InfiniteScroll>
      </div>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "create_team",
          ]
        }
      >
        <div
          className="margin--extra"
          style={
            Object {
              "marginTop": "0.5em",
            }
          }
        >
          <Link
            className="signup-team-login"
            id="createNewTeamLink"
            onClick={[Function]}
            to="/create_team"
          >
            <MemoizedFormattedMessage
              defaultMessage="Create a team"
              id="login.createTeam"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="mt-8 hidden-xs"
        >
          <Link
            className="signup-team-login"
            onClick={[Function]}
            to="/admin_console"
          >
            <MemoizedFormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on create team restricted 1`] = `
<div>
  <Connect(Component) />
  <BackButton
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="select-team__container signup-team__container"
    >
      <img
        alt="signup team logo"
        className="signup-team-logo"
        src={null}
      />
      <Memo(SiteNameAndDescription)
        siteName="Mattermost"
      />
      <div
        className="signup__content"
        id="teamsYouCanJoinContent"
      >
        <div
          className="SelectTeam__sub-header"
        >
          <h4>
            <MemoizedFormattedMessage
              defaultMessage="Teams you can join: "
              id="signup_team.join_open"
            />
          </h4>
          <LearnAboutTeamsLink />
        </div>
        <InfiniteScroll
          bufferValue={280}
          callBack={[Function]}
          endOfDataMessage=""
          itemsPerPage={30}
          loaderStyle={
            Object {
              "height": "40px",
              "padding": "0px",
            }
          }
          pageNumber={0}
          styleClass="signup-team-all"
          totalItems={15}
        >
          <div
            className="signup-team-dir-err"
          >
            <div>
              <MemoizedFormattedMessage
                defaultMessage="No teams are available to join. Please ask your administrator for an invite."
                id="signup_team.no_open_teams"
              />
            </div>
          </div>
        </InfiniteScroll>
      </div>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="mt-8 hidden-xs"
        >
          <Link
            className="signup-team-login"
            onClick={[Function]}
            to="/admin_console"
          >
            <MemoizedFormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on error 1`] = `
<div>
  <Connect(Component) />
  <BackButton
    onClick={[Function]}
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="select-team__container signup-team__container"
    >
      <img
        alt="signup team logo"
        className="signup-team-logo"
        src={null}
      />
      <Memo(SiteNameAndDescription)
        siteName="Mattermost"
      />
      <div
        className="signup__content"
      >
        <div
          className="form-group has-error"
        >
          <label
            className="control-label"
          >
            <Component />
          </label>
        </div>
      </div>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "create_team",
          ]
        }
      >
        <div
          className="margin--extra"
          style={
            Object {
              "marginTop": "0.5em",
            }
          }
        >
          <Link
            className="signup-team-login"
            id="createNewTeamLink"
            onClick={[Function]}
            to="/create_team"
          >
            <MemoizedFormattedMessage
              defaultMessage="Create a team"
              id="login.createTeam"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="mt-8 hidden-xs"
        >
          <Link
            className="signup-team-login"
            onClick={[Function]}
            to="/admin_console"
          >
            <MemoizedFormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on loading 1`] = `
<div>
  <Connect(Component) />
  <BackButton
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="select-team__container signup-team__container"
    >
      <img
        alt="signup team logo"
        className="signup-team-logo"
        src={null}
      />
      <Memo(SiteNameAndDescription)
        siteName="Mattermost"
      />
      <LoadingScreen />
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "create_team",
          ]
        }
      >
        <div
          className="margin--extra"
          style={
            Object {
              "marginTop": "0.5em",
            }
          }
        >
          <Link
            className="signup-team-login"
            id="createNewTeamLink"
            onClick={[Function]}
            to="/create_team"
          >
            <MemoizedFormattedMessage
              defaultMessage="Create a team"
              id="login.createTeam"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="mt-8 hidden-xs"
        >
          <Link
            className="signup-team-login"
            onClick={[Function]}
            to="/admin_console"
          >
            <MemoizedFormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on no joinable team and is not system admin nor can create team 1`] = `
<div>
  <Connect(Component) />
  <BackButton
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="select-team__container signup-team__container"
    >
      <img
        alt="signup team logo"
        className="signup-team-logo"
        src={null}
      />
      <Memo(SiteNameAndDescription)
        siteName="Mattermost"
      />
      <div
        className="signup__content"
        id="teamsYouCanJoinContent"
      >
        <div
          className="SelectTeam__sub-header"
        >
          <h4>
            <MemoizedFormattedMessage
              defaultMessage="Teams you can join: "
              id="signup_team.join_open"
            />
          </h4>
          <LearnAboutTeamsLink />
        </div>
        <InfiniteScroll
          bufferValue={280}
          callBack={[Function]}
          endOfDataMessage=""
          itemsPerPage={30}
          loaderStyle={
            Object {
              "height": "40px",
              "padding": "0px",
            }
          }
          pageNumber={0}
          styleClass="signup-team-all"
          totalItems={15}
        >
          <div
            className="signup-team-dir-err"
          >
            <div>
              <Memo(SystemPermissionGate)
                permissions={
                  Array [
                    "create_team",
                  ]
                }
              >
                <MemoizedFormattedMessage
                  defaultMessage="No teams are available to join. Please create a new team or ask your administrator for an invite."
                  id="signup_team.no_open_teams_canCreate"
                />
              </Memo(SystemPermissionGate)>
              <Memo(SystemPermissionGate)
                invert={true}
                permissions={
                  Array [
                    "create_team",
                  ]
                }
              >
                <MemoizedFormattedMessage
                  defaultMessage="No teams are available to join. Please ask your administrator for an invite."
                  id="signup_team.no_open_teams"
                />
              </Memo(SystemPermissionGate)>
            </div>
          </div>
        </InfiniteScroll>
      </div>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "create_team",
          ]
        }
      >
        <div
          className="margin--extra"
          style={
            Object {
              "marginTop": "0.5em",
            }
          }
        >
          <Link
            className="signup-team-login"
            id="createNewTeamLink"
            onClick={[Function]}
            to="/create_team"
          >
            <MemoizedFormattedMessage
              defaultMessage="Create a team"
              id="login.createTeam"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="mt-8 hidden-xs"
        >
          <Link
            className="signup-team-login"
            onClick={[Function]}
            to="/admin_console"
          >
            <MemoizedFormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on no joinable team and user is guest 1`] = `
<div>
  <Connect(Component) />
  <BackButton
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="select-team__container signup-team__container"
    >
      <img
        alt="signup team logo"
        className="signup-team-logo"
        src={null}
      />
      <Memo(SiteNameAndDescription)
        siteName="Mattermost"
      />
      <div
        className="signup__content"
      >
        <div
          className="form-group has-error"
        >
          <label
            className="control-label"
          >
            <MemoizedFormattedMessage
              defaultMessage="Your guest account has no channels assigned. Please contact an administrator."
              id="signup_team.guest_without_channels"
            />
          </label>
        </div>
      </div>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "create_team",
          ]
        }
      >
        <div
          className="margin--extra"
          style={
            Object {
              "marginTop": "0.5em",
            }
          }
        >
          <Link
            className="signup-team-login"
            id="createNewTeamLink"
            onClick={[Function]}
            to="/create_team"
          >
            <MemoizedFormattedMessage
              defaultMessage="Create a team"
              id="login.createTeam"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="mt-8 hidden-xs"
        >
          <Link
            className="signup-team-login"
            onClick={[Function]}
            to="/admin_console"
          >
            <MemoizedFormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
    </div>
  </div>
</div>
`;

exports[`components/select_team/SelectTeam should match snapshot, on no joinable team but can create team 1`] = `
<div>
  <Connect(Component) />
  <BackButton
    url="/"
  />
  <div
    className="col-sm-12"
  >
    <div
      className="select-team__container signup-team__container"
    >
      <img
        alt="signup team logo"
        className="signup-team-logo"
        src={null}
      />
      <Memo(SiteNameAndDescription)
        siteName="Mattermost"
      />
      <div
        className="signup__content"
        id="teamsYouCanJoinContent"
      >
        <div
          className="SelectTeam__sub-header"
        >
          <h4>
            <MemoizedFormattedMessage
              defaultMessage="Teams you can join: "
              id="signup_team.join_open"
            />
          </h4>
          <LearnAboutTeamsLink />
        </div>
        <InfiniteScroll
          bufferValue={280}
          callBack={[Function]}
          endOfDataMessage=""
          itemsPerPage={30}
          loaderStyle={
            Object {
              "height": "40px",
              "padding": "0px",
            }
          }
          pageNumber={0}
          styleClass="signup-team-all"
          totalItems={15}
        >
          <div
            className="signup-team-dir-err"
          >
            <div>
              <MemoizedFormattedMessage
                defaultMessage="No teams are available to join. Please create a new team or ask your administrator for an invite."
                id="signup_team.no_open_teams_canCreate"
              />
            </div>
          </div>
        </InfiniteScroll>
      </div>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "create_team",
          ]
        }
      >
        <div
          className="margin--extra"
          style={
            Object {
              "marginTop": "0.5em",
            }
          }
        >
          <Link
            className="signup-team-login"
            id="createNewTeamLink"
            onClick={[Function]}
            to="/create_team"
          >
            <MemoizedFormattedMessage
              defaultMessage="Create a team"
              id="login.createTeam"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
      <Memo(SystemPermissionGate)
        permissions={
          Array [
            "manage_system",
          ]
        }
      >
        <div
          className="mt-8 hidden-xs"
        >
          <Link
            className="signup-team-login"
            onClick={[Function]}
            to="/admin_console"
          >
            <MemoizedFormattedMessage
              defaultMessage="Go to System Console"
              id="signup_team_system_console"
            />
          </Link>
        </div>
      </Memo(SystemPermissionGate)>
    </div>
  </div>
</div>
`;
